Run query without refreshing page
Refactored code so that the 'Get Visits' button will run the query again
without having to refresh the page.

This means you can run a query then, once query has finished running you
can modify form inputs and run another query.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- The buttons for user control -->
     <div>
-    <button id="clear-form">Clear Form</button><br />
+    <button id="clear-form" onclick="clearForm()">Clear Form</button><br />
     <button id="authorize-button" style="visibility: hidden">Authorize</button><br/>
     <button id="make-api-call-button" style="visibility: hidden">Get Visits</button>
     <span id="loading" style="visibility:hidden">Loading</span>
