Basic UI improvements
Tidied up the elements. Replaced 'visibility: hidden' with 'display:
none' so that hidden elements don't leave empty space.

UI needs work.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE>
 <html>
   <head>
-    <title>Google Analytics Overview Tool</title>
+    <title>multi GA: download Google Analytics data for multiple websites</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body><div id="main">
+  <body>
     <div>
-    <h1>Google Analytics Overview Tool</h1>
-    <p>This tool allows you to run a Google Analytics query across all websites in your GA account. You can build the query parameters using <a href="http://ga-dev-tools.appspot.com/explorer/" target="_blank">Google's own query tool</a> then paste the parameters into this form to run the same query across all accounts.</p>
+    <h1>multi GA</h1>
+    <p>This tool allows you to run a Google Analytics (GA) query across all websites in your GA account. You can build the query parameters using <a href="http://ga-dev-tools.appspot.com/explorer/" target="_blank">Google's own query tool</a> then paste the parameters into this form to run the same query across all accounts.</p>
+    <h6>Built by <a href="http://twitter.com/albertkawmi">@AlbertKawmi</a>. Background photo by <a href="https://www.flickr.com/photos/janospics/2851859649">JanOSpixeles</a> via Flickr Creative Commons.</h6>
     </div>
     <!-- Form to name the Query -->
     <div>
@@ -30,23 +31,17 @@
       <input type="text" name="sort"> Sort<br />
       <input type="text" name="start-index"> Start index<br />
       <input type="text" name="fields"> Fields<br />
-    </form></div>
+    </form>
 
     <!-- The buttons for user control -->
-    <div>
-    <button id="clear-form" onclick="clearForm()">Clear Form</button><br />
-    <button id="authorize-button" style="visibility: hidden">Authorize</button><br/>
-    <button id="make-api-call-button" style="visibility: hidden">Get Visits</button>
-    <span id="loading" style="visibility:hidden">Loading</span>
-    <a id="csv-link" style="visibility:hidden">Download CSV</a>
+    
+    <button id="authorize-button" style="display:none">Authorize</button>
+    <button id="make-api-call-button" style="display:none">Get Visits</button>
+    <span id="loading" style="display:none">Loading</span>
+    <a id="csv-link" style="display:none">Download CSV</a>
+    <p><a id="clear-form" href="#" onclick="clearForm()">Clear Form</a></p>
     </div>
 
-    <div>
-    <h6>Built by <a href="http://twitter.com/albertkawmi">@AlbertKawmi</a>. Background photo by <a href="https://www.flickr.com/photos/janospics/2851859649">JanOSpixeles</a> via Flickr Creative Commons.</h6>
-  </div>
-
-</div><!-- end main div -->
-    <!-- These JavaScript files will be created later on in the tutorial -->
     <script src="GA_auth.js"></script>
     <script src="GA_overview.js"></script>
 
