Added logout link
Only way is to sign your browser out of Google. Added this as a simple
HTML link.

Updated Readme.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <button id="make-api-call-button" style="display:none">Get Visits</button>
     <span id="loading" style="display:none">Loading</span>
     <a id="csv-link" style="display:none">Download CSV</a>
-    <p><a id="clear-form" href="#" onclick="clearForm()">Clear Form</a></p>
+    <p><a id="clear-form" href="#" onclick="clearForm()">Clear Form</a> | <a href="https://accounts.google.com/logout">Log out</a></p>
     </div>
 
     <script src="GA_auth.js"></script>
