Removed unnecessary fields
Commented out advanced fields in HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <div>
     <h1>multi GA</h1>
     <p>This tool allows you to run a Google Analytics (GA) query across all websites in your GA account. You can build the query parameters using <a href="http://ga-dev-tools.appspot.com/explorer/" target="_blank">Google's own query tool</a> then paste the parameters into this form to run the same query across all accounts.</p>
-    <h6>Built by <a href="http://twitter.com/albertkawmi">@AlbertKawmi</a>. Background photo by <a href="https://www.flickr.com/photos/janospics/2851859649">JanOSpixeles</a> via Flickr Creative Commons.</h6>
+    <p>Can you help improve this free tool? <a href="https://github.com/albertkawmi/multiga" target="_blank">multiGA is on GitHub</a>.</p>
+    <h6>Built by <a href="http://twitter.com/albertkawmi">@AlbertKawmi</a>. Background photo by <a href="https://www.flickr.com/photos/janospics/2851859649">JanOSpixeles</a> via Flickr Creative Commons. </h6>
     </div>
     <!-- Form to name the Query -->
     <div>
@@ -24,13 +25,15 @@
       <input type="text" name="metrics" value="ga:visits"> Metrics<br />
       <input type="text" name="dimensions" value="ga:medium"> Dimensions<br />
       <input type="text" name="filters"> Filters<br />
-      <input type="text" name="max-results"> Max results<br />
-      <input type="text" name="output"> Output<br />
-      <!-- <input type="text" name="sampling-level"> Sampling level<br /> -->
       <input type="text" name="segment"> Segment<br />
       <input type="text" name="sort"> Sort<br />
+      <input type="text" name="max-results"> Max results<br />
+      <!-- Advanced or unnecessery API options 
       <input type="text" name="start-index"> Start index<br />
+      <input type="text" name="sampling-level"> Sampling level<br />
+      <input type="text" name="output"> Output<br /> 
       <input type="text" name="fields"> Fields<br />
+      -->
     </form>
 
     <!-- The buttons for user control -->
@@ -40,6 +43,7 @@
     <span id="loading" style="display:none">Loading</span>
     <a id="csv-link" style="display:none">Download CSV</a>
     <p><a id="clear-form" href="#" onclick="clearForm()">Clear Form</a> | <a href="https://accounts.google.com/logout">Log out</a></p>
+    <h6></h6>
     </div>
 
     <script src="GA_auth.js"></script>
