quick css fixes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <main>
     <div>
     <h1>multi GA</h1>
     <p>This tool allows you to run a Google Analytics (GA) query across all websites in your GA account. You can build the query parameters using <a href="http://ga-dev-tools.appspot.com/explorer/" target="_blank">Google's own query tool</a> then paste the parameters into this form to run the same query across all accounts.</p>
@@ -48,6 +49,7 @@
     <p><a id="clear-form" href="#" onclick="clearForm()">Clear Form</a> | <a href="https://accounts.google.com/logout">Log out</a></p>
     <h6></h6>
     </div>
+  </main>
 
     <script src="GA_auth.js"></script>
     <script src="GA_overview.js"></script>
