quick css fixes

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <main>
     <div>
+    <section>
     <h1>multi GA</h1>
     <p>This tool allows you to run a Google Analytics (GA) query across all websites in your GA account. You can build the query parameters using <a href="http://ga-dev-tools.appspot.com/explorer/" target="_blank">Google's own query tool</a> then paste the parameters into this form to run the same query across all accounts.</p>
     <p>Can you help improve this free tool? <a href="https://github.com/albertkawmi/multiga" target="_blank">multiGA is on GitHub</a>.</p>
     <h6>Built by <a href="http://twitter.com/albertkawmi">@AlbertKawmi</a>. Background photo by <a href="https://www.flickr.com/photos/janospics/2851859649">JanOSpixeles</a> via Flickr Creative Commons. </h6>
-    </div>
+    </section>
     <!-- Form to name the Query -->
-    <div>
+    <section>
     <form name="qname">
       <input type="text" name="query-name"> Query Name
     </form>
@@ -48,8 +48,8 @@
     <a id="csv-link" style="display:none">Download CSV</a>
     <p><a id="clear-form" href="#" onclick="clearForm()">Clear Form</a> | <a href="https://accounts.google.com/logout">Log out</a></p>
     <h6></h6>
-    </div>
-  </main>
+    </section>
+  </div>
 
     <script src="GA_auth.js"></script>
     <script src="GA_overview.js"></script>
