Added icons to buttons

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </form>
       
       <section id="buttons">
-        <button id="btn-authorize">Authorize</button>
-        <button id="btn-get-data">Get Data</button>
+        <button id="btn-authorize"><i class="fa fa-sign-in"></i>Authorize</button>
+        <button id="btn-get-data"><i class="fa fa-bar-chart"></i>Get Data</button>
         <div id="loading"><i id="spinner" class="fa fa-circle-o-notch fa-2x fa-spin"></i></div>
         <a id="csv-link" href="#"><button id="save"><i class="fa fa-download"></i>Download .csv file</button></a>
       </section>
