--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <p>This tool allows you to run a Google Analytics (GA) query across all websites in your GA account. You can build the query parameters using <a href="http://ga-dev-tools.appspot.com/explorer/" target="_blank">Google's own query tool</a> then paste the parameters into this form to run the same query across multiple websites.</p>
       <p>Your results can be saved to a CSV file for use in Excel or other applications.</p>
     </section>
-    <a name="clear-form">
+    <a name="#clear-form"></a>
     <!-- Form to name the Query -->
     <section>
-      </a><h2>Give your query a name:</h2>
+      <h2>Give your query a name:</h2>
       <form name="queryName">
         <label>Query Name</label><input type="text" name="query-name" value="My Query">
       </form>
