--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
     <script src="GA_auth.js"></script>
     <script src="many-analytics.js"></script>
     <!-- Load the Client Library. Use the onload parameter to specify a callback function -->
-    <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
+    <script src="https://apis.google.com/js/client.js?onload=handleClientLoad/"></script>
   </body>
 </html>
